Fixed: Image Toolbar extension prevents collapsing of blocked elements from working on images
--HG--
extra : rebase_source : 9b5316e44ecd2ff103caff9a338c1f943898f3e8

--- a/chrome/content/objtabs.css
+++ b/chrome/content/objtabs.css
@@ -89,3 +89,8 @@ a.%%CLASSNAME%% > img
   /* Images still load even if invisible, unlikely to change */
   display: none !important;
 }
+
+.%%COLLAPSED%%
+{
+  -moz-binding: url(chrome://global/content/bindings/general.xml#asdfzxcv) !important;
+}
